Fix page connector spilling over container

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -235,6 +235,9 @@ footer {
 
 .page-connector {
     font-size: 1.25rem;
+}
+
+.page-connector a {
     white-space: nowrap;
 }
 
